fix background color (on mobile it wasn't cover all screen); add media queries for the elements on the Finish quiz page

--- a/assets/css/quiz.css
+++ b/assets/css/quiz.css
@@ -1,11 +1,7 @@
 /* --------------------------------------General */
 body {
     font-family: 'Quicksand', sans-serif;
-}
-
-.header-margin {
-    margin-top: 50px;
-    margin-bottom: 25px;
+    background-color: #C3F2FD;
 }
 
 .inline-right {
@@ -27,14 +23,6 @@ body {
 }
 
 /* ---------------------------------Question card page */
-
-.container-fluid {
-
-    background-color: #C3F2FD;
-    background-size: cover;
-    height: 100vh;
-    margin-bottom: 0;
-}
 
 #question-card {
     align-items: center;
@@ -96,13 +84,8 @@ h2 {
     padding: 15px;
 }
 
-#emailField {
-    width: 30%;
-}
-
 .btn {
     padding: 0.6rem 1.75rem;
-    font-size: 1.5rem;
     line-height: normal;
     border-radius: 1rem;
     background-color: #2160ff;
@@ -110,7 +93,7 @@ h2 {
     border: none;
     text-transform: uppercase;
     color: white;
-    margin-top: 30px;
+    margin: 30px 0 30px 0;
 }
 
 .btn:hover {
@@ -121,4 +104,69 @@ h2 {
 
 .btn:focus {
     box-shadow: none;
+}
+
+/* extra small and small devices */
+@media only screen and (min-width: 0px) {
+    h2 {
+        font-size: 1.5rem;
+    }
+
+    h3 {
+        font-size: 1.25rem;
+    }
+
+    #emailField {
+        width: 100%;
+    }
+
+    .header-margin {
+        margin-top: 40px;
+        margin-bottom: 20px;
+    }
+
+    .btn {
+        font-size: 1rem;
+    }
+
+}
+
+/* medium, large and extra large devices (up to 2560px) */
+@media only screen and (min-width: 768px) {
+    h2 {
+        font-size: 2rem;
+    }
+
+    h3 {
+        font-size: 1.75rem;
+    }
+
+    #emailField {
+        width: 30%;
+    }
+
+    .header-margin {
+        margin-top: 50px;
+        margin-bottom: 30px;
+    }
+
+    .btn {
+        font-size: 1.25rem;
+    }
+}
+
+
+/* extra large devices (2560px and up) */
+@media only screen and (min-width: 2560px) {
+    h2 {
+        font-size: 2.25rem;
+    }
+
+    h3 {
+        font-size: 2rem;
+    }
+
+    .btn {
+        font-size: 1.5rem;
+    }
 }
